# cs106-svmlt

./: .gitignore  README.md
src/: README  SUBMIT.05
src/depths/: AutoCurry  DynLoad
src/huft/: GRAMMAR  Makefile  README  allsyntax.vo  hi  hi.scm  huft.cabal  nightmare  out.s  out.scm1  test.scm
src/huft/app/: Main.hs
src/huft/debug/: out.scm
src/huft/src/: ASM.hs  ASMParse.hs  ASMUnparse.hs  Ambiguate.hs  Asm.hs  AsmParse.hs  AsmUnparse.hs  AsmUtils.hs  Assembler.hs  CSUtil.hs  Case.hs  ClConvert.hs  ClScheme.hs  CodeGen.hs  Constructed.hs  Disambiguate.hs  Env.hs  Error.hs  FOClUtil.hs  FOScheme.hs  FOUtil.hs  FoClUtil.hs  KNF.hs  KNormalize.hs  KnEmbed.hs  KnProject.hs  KnRename.hs  Languages.hs  MatchCompiler.hs  MatchViz.hs  ObjectCode.hs  ObjectUnparser.hs  ParseUtils.hs  Pattern.hs  Primitives.hs  Sx.hs  SxParse.hs  UFT.hs  UnambiguousVScheme.hs  VScheme.hs  (+4 more)
src/huft/test/: allsyntax.vs  bad.begin.scm  bad.let.scm  bad.while.scm  bad.whilevars.scm  change.vs  changes.vs  curry.scm  diff.vs  dload.kn  fact.kn  fig6.scm  fopredef.scm  good.scm  hi.vs  infinite.scm  kntest.scm  let.kn  loadme.kn  map.scm  module10.scm  mut.scm  nested.scm  nightmare.scm  o-curry.vs  parity.kn  parity.scm  parity.vs  point99.scm  qsort-orig.scm  qsort.scm  scheme105.scm  scheme105b.scm  string  tailm.kn  temp  test.scm  undefined.kn  use.scm
src/huft/test/curry/: curry.scm
src/huft/test/dload/: dload.scm  good.scm  loadme.scm  predef.scm  scheme105e.scm
src/huft/tests/: GRAMMAR  allsyntax.vs  loadfun.vs  round-trip.vs
src/submit/: SUBMIT.04  SUBMIT.06  SUBMIT.07  SUBMIT.08  SUBMIT.09  SUBMIT.10  SUBMIT.11  SUBMIT.12
src/svm/: .vmrun.c.swp  (+26 more)
test/: dloadtest.vo  fail.vo  glo.vo  hello.vo  inttest.vo  loadme.vo  pass.vo  test.vo  unparse.vs
(+114 files in other folders)
