cabal-version:      2.4
name:               huft
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jasper Geer
maintainer:         jasper.geer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable huft
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.hs
    -- must strictly match the file name
    other-modules:
        Asm,
        AsmParse,
        AsmUnparse,
        Assembler,
        Env,
        ObjectCode,
        ObjectUnparser,
        Languages,
        Error,
        UFT,
        VScheme,
        VSchemeParse,
        VSchemeUnparse,
        Primitives,
        UnambiguousVScheme,
        Disambiguate,
        KNF,
        KnEmbed,
        KnProject,
        KnRename,
        Ambiguate,
        ParseUtils,
        Sx,
        SxParse,
        VSchemeUtils,
        CodeGen,
        AsmUtils,
        FOScheme,
        FOUtil,
        KNormalize,
        ClScheme,
        CSUtil,
        FOClUtil,
        ClConvert,
        Case,
        Constructed,
        Pattern,
        MatchCompiler,
        MatchViz

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        containers,
        parsec,
        text,
        prettyprinter,
        transformers
        
    hs-source-dirs:   app, src
    default-language: Haskell2010
